--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -140,14 +140,14 @@
     Poison: 0.8 
 
 - type: damageModifierSet
-  id: Moth # Slightly worse at everything but cold
+  id: Moth # Slightly worse at almost everything but cold
   coefficients:
-    Blunt: 1
-    Piercing: 1.15
-    Slash: 1.15
-    Cold: 0.7
-    Heat: 1.3
-    Poison: 1.1
+    Blunt: 0.7
+    Piercing: 1
+    Slash: 1.3
+    Cold: 0.65
+    Heat: 1.5
+    Poison: 1.2
 
 - type: damageModifierSet
   id: Zombie #Blunt resistant and immune to biological threats, but can be hacked apart and burned
@@ -176,15 +176,6 @@
     Cellular: 0.0
   flatReductions:
     Blunt: 5
-
-- type: damageModifierSet
-  id: Moth
-  coefficients:
-    Blunt: 0.7
-    Slash: 1.3
-    Cold: 0.65
-    Heat: 1.5
-    Poison: 1.2
 
 # Represents which damage types should be modified
 # in relation to how they cause bleed rate.
