--- a/Resources/Prototypes/Body/Parts/moth.yml
+++ b/Resources/Prototypes/Body/Parts/moth.yml
@@ -102,6 +102,9 @@
   - type: Sprite
     sprite: Mobs/Species/Moth/parts.rsi
     state: "l_leg"
+  - type: MovementBodyPart
+    walkSpeed : 3.5
+    sprintSpeed : 5.5
 #    criticalThreshold: 45
 #    deadThreshold: 90
 
@@ -113,6 +116,9 @@
   - type: Sprite
     sprite: Mobs/Species/Moth/parts.rsi
     state: "r_leg"
+  - type: MovementBodyPart
+    walkSpeed : 3.5
+    sprintSpeed : 5.5
 #    criticalThreshold: 45
 #    deadThreshold: 90
 
