--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -235,6 +235,11 @@
   - type: Appearance
   - type: Item
     heldPrefix: wood
+  - type: Tag
+    tags:
+      - DroneUsable
+      - RawMaterial
+      - Wood
 
 - type: entity
   parent: MaterialWoodPlank
