улучшение скафандров мед. и инж. отделов.

--- a/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
@@ -68,6 +68,10 @@
         Slash: 0.95
         Heat: 0.90
         Radiation: 0.75
+  - type: ClothingGrantComponent
+    component:
+    - type: ShowHealthBars
+      damageContainer: Biological
 
 #Ancient Void Helmet
 - type: entity
