--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -731,3 +731,21 @@
     sprite: Clothing/Head/Hardsuits/clown.rsi
     equipSound: /Audio/Mecha/mechmove03.ogg
     unequipSound: /Audio/Effects/Emotes/parp1.ogg
+
+# Chrono Legionnaire Hardsuit
+- type: entity
+  parent: ClothingHeadHardsuitWithLightBase
+  id: ClothingHeadHelmetHardsuitChronoLegionnaire
+  noSpawn: true
+  name: chrono legionnaire hardsuit helmet
+  description: An advanced and stylish helmet right from the future. Or from the past?
+  components:
+  - type: Sprite
+    sprite: Clothing/Head/Hardsuits/chronolegionnaire.rsi
+  - type: Clothing
+    sprite: Clothing/Head/Hardsuits/chronolegionnaire.rsi
+  - type: PointLight
+    color: "#3385ff"
+  - type: PressureProtection
+    highPressureMultiplier: 0.08
+    lowPressureMultiplier: 1000
