--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -876,3 +876,37 @@
     node: clownHardsuit
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHelmetHardsuitClown
+
+#Chrono Legionnaire Hardsuit
+- type: entity
+  parent: ClothingOuterHardsuitBase
+  id: ClothingOuterHardsuitChronoLegionnaire
+  name: chrono legionnaire hardsuit
+  description: An advanced and stylish hardsuit right from the future.
+  components:
+  - type: Sprite
+    sprite: Clothing/OuterClothing/Hardsuits/chronolegionnaire.rsi
+  - type: Clothing
+    sprite: Clothing/OuterClothing/Hardsuits/chronolegionnaire.rsi
+  - type: PressureProtection
+    highPressureMultiplier: 0.02
+    lowPressureMultiplier: 1000
+  - type: TemperatureProtection
+    coefficient: 0.001
+  - type: ExplosionResistance
+    damageCoefficient: 0.2
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.2
+        Slash: 0.2
+        Piercing: 0.2
+        Heat: 0.1
+        Radiation: 0
+        Caustic: 0.2
+  - type: ClothingSpeedModifier
+    walkModifier: 1
+    sprintModifier: 1
+  - type: ToggleableClothing
+    clothingPrototype: ClothingHeadHelmetHardsuitChronoLegionnaire
+  - type: Unremoveable
