TG maps: Update

--- a/Resources/Maps/nukieplanet.yml
+++ b/Resources/Maps/nukieplanet.yml
@@ -10114,7 +10114,7 @@ entities:
       type: Transform
     - fixtures: {}
       type: Fixtures
-- proto: FloorLavaEntity
+- proto: FloorLiquidPlasmaEntity
   entities:
   - uid: 1066
     components:
