--- a/Resources/Audio/Voice/Talk/attributions.yml
+++ b/Resources/Audio/Voice/Talk/attributions.yml
@@ -2,3 +2,8 @@
   license: "CC-BY-4.0"
   copyright: "Recorded by https://github.com/PixelTheKermit"
   source: "https://github.com/space-wizards/space-station-14/pull/13945"
+
+- files: ["borg.ogg", "borg_ask.ogg", "borg_exclaim.ogg"]
+  license: "CC-BY-4.0"
+  copyright: "Recorded and mixed by https://github.com/MilenVolf"
+  source: "https://git.arumoon.ru/Workbench-Team/space-station-14/-/merge_requests/123"
