Fix borgs walking sound

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -11,6 +11,7 @@
   - type: Input
     context: "human"
   - type: InputMover
+  - type: MobMover
   - type: DamageOnHighSpeedImpact
     damage:
       types:
