--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -341,6 +341,8 @@
         whitelist:
           tags:
             - Syringecartridge
+  - type: ChamberMagazineAmmoProvider
+    boltClosed: null
   - type: MagazineVisuals
     magState: mag
     steps: 1
@@ -369,6 +371,8 @@
     - FullAuto
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/syringeproj.ogg
+  - type: ChamberMagazineAmmoProvider
+    boltClosed: null
   - type: ItemSlots
     slots:
       gun_chamber:
