--- a/Resources/Prototypes/Entities/Objects/Misc/garment.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/garment.yml
@@ -8,6 +8,9 @@
     size: 105
   - type: Storage
     capacity: 105
+    whitelist:
+      tags:
+        - ClothMade
 
 - type: entity
   name: garment bag
