Added Tag "Clothing" & Edited Cloths tags
Added Tag "Clothing" to some wearings to resolve garments

--- a/Resources/Prototypes/Entities/Clothing/Head/base_clothinghead.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/base_clothinghead.yml
@@ -20,6 +20,7 @@
   - type: Tag
     tags:
       - DogWearable
+      - Clothing
       - ClothMade
       - DroneUsable
       - WhitelistChameleon
@@ -36,6 +37,9 @@
       amount: 1
   - type: Tag
     tags:
+      - DogWearable
+      - Clothing
+      - ClothMade
       - WhitelistChameleon
 
 - type: entity
