--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -77,6 +77,7 @@
   - type: VisionCorrection
   - type: Tag
     tags:
+    - Clothing
     - HamsterWearable
     - WhitelistChameleon
 
@@ -108,6 +109,7 @@
     protectionTime: 5
   - type: Tag
     tags:
+    - Clothing
     - HamsterWearable
     - WhitelistChameleon
 
@@ -126,6 +128,7 @@
     protectionTime: 5
   - type: Tag
     tags:
+    - Clothing
     - HamsterWearable
     - WhitelistChameleon
 
