--- a/Resources/Prototypes/Entities/Clothing/Eyes/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/specific.yml
@@ -6,7 +6,8 @@
   suffix: Chameleon
   components:
     - type: Tag
-      tags: [] # ignore "WhitelistChameleon" tag
+      tags:
+        - Clothing # ignore "WhitelistChameleon" tag
     - type: Sprite
       sprite: Clothing/Eyes/Glasses/sunglasses.rsi
     - type: Clothing
