--- a/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
@@ -7,6 +7,10 @@
     state: icon
   - type: Clothing
     slots: [mask]
+  - type: Tag
+    tags:
+      - Clothing
+      - WhitelistChameleon
 
 - type: entity
   abstract: true
