--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -42,6 +42,10 @@
       type: StorageBoundUserInterface
   - type: StaticPrice
     price: 80
+  - type: Tag
+    tags:
+    - Clothing
+    - WhitelistChameleon
 
 - type: entity
   abstract: true
