--- a/Resources/Prototypes/Catalog/ReagentDispensers/chemical.yml
+++ b/Resources/Prototypes/Catalog/ReagentDispensers/chemical.yml
@@ -28,4 +28,28 @@
   - Napalm
   - Toxin
   - Epinephrine
-  - Ultravasculine
+  - Uranium
+  
+- type: reagentDispenserInventoryTiered
+  id: ChemDispenserTier2Inventory
+  tier: 2
+  inventory:
+  - Ammonia
+  - Oil
+  - SulfuricAcid
+  
+- type: reagentDispenserInventoryTiered
+  id: ChemDispenserTier3Inventory
+  tier: 3
+  inventory:
+  - Acetone
+  - Phenol
+  - SodiumCarbonate
+  - Water
+  
+- type: reagentDispenserInventoryTiered
+  id: ChemDispenserTier4Inventory
+  tier: 4
+  inventory:
+  - Plasma
+  
