--- a/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
@@ -11,6 +11,10 @@
   - type: ReagentDispenser
     pack: ChemDispenserStandardInventory
     emagPack: ChemDispenserEmaggedInventory
+    upgradePacks: 
+    - ChemDispenserTier2Inventory
+    - ChemDispenserTier3Inventory
+    - ChemDispenserTier4Inventory
   - type: ApcPowerReceiver
   - type: ExtensionCableReceiver
   - type: Destructible
