--- a/Resources/Prototypes/Catalog/Cargo/cargo_engineering.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_engineering.yml
@@ -87,3 +87,23 @@
   cost: 5000
   category: Engineering
   group: market
+
+- type: cargoProduct
+  id: TegCenterCargo
+  icon:
+    sprite: Structures/Power/Generation/teg.rsi
+    state: icon_mid
+  product: CrateEngineeringTegCenter
+  cost: 10000
+  category: Engineering
+  group: market
+
+- type: cargoProduct
+  id: TegCirculatorCargo
+  icon:
+    sprite: Structures/Power/Generation/teg.rsi
+    state: icon_circ
+  product: CrateEngineeringTegCirculator
+  cost: 5000
+  category: Engineering
+  group: market
