--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -334,3 +334,20 @@
         - id: Cutlass
         - id: WeaponRevolverPirate
         - id: ClothingEyesEyepatch
+
+- type: entity
+  parent: ClothingBackpackERTSecurity
+  id: ClothingBackpackDeathsquad
+  components:
+    - type: StorageFill
+      contents:
+        - id: BoxSurvival
+        - id: WeaponRevolverMateba
+        - id: WeaponPulseRifle
+        - id: SpeedLoaderMagnumAP
+        - id: MagazineBoxMagnum
+        - id: C4
+        - id: C4
+        - id: MedkitDeathsquadFilled
+        - id: BoxAMRE
+        - id: MicroBombImplanter
