--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -297,6 +297,64 @@
     tags: []
 
 - type: entity
+  name: nutriment medipen
+  parent: ChemicalMedipen
+  id: NutrimentMedipen
+  description: A single-use medipen containing nutriment.
+  components:
+  - type: Sprite
+    sprite: Objects/Specific/Medical/medipen.rsi
+    layers:
+    - state: hypovolemic
+      map: [ "enum.SolutionContainerLayers.Fill" ]
+  - type: Item
+    sprite: Objects/Specific/Medical/medipen.rsi
+    size: 5
+  - type: SolutionContainerManager
+    solutions:
+      pen:
+        maxVol: 30
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 30
+  - type: Hypospray
+    solutionName: pen
+    transferAmount: 10
+  - type: StaticPrice
+    price: 250
+  - type: Tag
+    tags: []
+
+- type: entity
+  name: salin medipen
+  parent: ChemicalMedipen
+  id: SalineMedipen
+  description: A single-use medipen containing saline.
+  components:
+  - type: Sprite
+    sprite: Objects/Specific/Medical/medipen.rsi
+    layers:
+    - state: morphen
+      map: ["enum.SolutionContainerLayers.Fill"]
+  - type: Item
+    sprite: Objects/Specific/Medical/medipen.rsi
+    size: 5
+  - type: SolutionContainerManager
+    solutions:
+      pen:
+        maxVol: 30
+        reagents:
+        - ReagentId: Saline
+          Quantity: 30
+  - type: Hypospray
+    solutionName: pen
+    transferAmount: 10
+  - type: StaticPrice
+    price: 200
+  - type: Tag
+    tags: []
+
+- type: entity
   name: pen
   suffix: Hypopen
   parent: Pen # It is just like normal pen, isn't it?
@@ -331,7 +389,7 @@
       path: /Audio/Effects/unwrap.ogg
 
 - type: entity
-  name: Luxury Medipen 
+  name: Luxury Medipen
   parent: ChemicalMedipen
   id: Luxurymedpen
   description: Contains enough stimulants for you to have the chemical's effect for 30 seconds. Use it when you're sure you're ready to throw down.
