Update powercells.yml (#226)

--- a/Resources/Prototypes/Entities/Objects/Power/powercells.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/powercells.yml
@@ -25,6 +25,8 @@
       reagents:
         - ReagentId: Lithium
           Quantity: 15
+        - ReagentId: Lead
+          Qunatity: 5
   - type: Tag
     tags:
       - DroneUsable
