--- a/Resources/Prototypes/Entities/Mobs/Species/moth.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/moth.yml
@@ -22,6 +22,7 @@
     requiredLegs: 2
   - type: Damageable
     damageContainer: Biological
+    damageModifierSet: Moth # moff
   - type: Speech
     speechVerb: Insect
   - type: Butcherable
