--- a/Resources/Prototypes/Entities/Clothing/Uniforms/jumpsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/Uniforms/jumpsuits.yml
@@ -139,6 +139,17 @@
 
 - type: entity
   parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitCentcomIntern
+  name: CentCom intern jumpsuit
+  description: It's a jumpsuit worn by CentCom's intern.
+  components:
+  - type: Sprite
+    sprite: Clothing/Uniforms/Jumpsuit/centcom_intern.rsi
+  - type: Clothing
+    sprite: Clothing/Uniforms/Jumpsuit/centcom_intern.rsi
+
+- type: entity
+  parent: ClothingUniformBase
   id: ClothingUniformJumpsuitChef
   name: chef uniform
   description: Can't cook without this.
