--- a/Resources/Prototypes/Entities/Objects/Weapons/security.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/security.yml
@@ -141,6 +141,35 @@
     - Security
 
 - type: entity
+  name: baton
+  parent: BaseItem
+  id: Baton
+  description: A rigid, steel-studded baton, meant to harm.
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Melee/baton.rsi
+    state: icon
+  - type: MeleeWeapon
+    damage:
+      types:
+        Blunt: 5
+    bluntStaminaDamageFactor: 2.0
+  - type: StaminaDamageOnHit
+    damage: 18
+  - type: Item
+    size: 20
+  - type: Clothing
+    sprite: Objects/Weapons/Melee/baton.rsi
+    quickEquip: false
+    slots:
+    - Belt
+  - type: DisarmMalus
+    malus: 0.225
+  - type: Appearance
+  - type: StaticPrice
+    price: 100
+
+- type: entity
   name: flash
   parent: BaseItem
   id: Flash
