New craftable weapon: Emitter Cannon (#232)
* add Emitter gun

* locale files

* Emitter Cannon improvements

---------

Co-authored-by: MilenVolf <milen.volf@gmail.com>

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -808,6 +808,10 @@
       materialRequirements:
         CableHV: 5
         Glass: 2
+    - type: Tag
+      tags:
+        - DroneUsable
+        - EmitterCircuitBoard
 
 - type: entity
   id: SurveillanceCameraRouterCircuitboard
