--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -584,3 +584,32 @@
       proto: BulletCutterAdv
       fireCost: 100
     - type: Appearance
+
+- type: entity
+  name: Emitter Cannon
+  id: WeaponEmitterCannon
+  parent: BaseWeaponBattery
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Battery/emitter_cannon.rsi
+    layers:
+    - state: idle
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-unshaded-4
+      map: ["enum.GunVisualLayers.MagUnshaded"]
+      shader: unshaded
+  - type: Gun
+    fireRate: 0.5
+    soundGunshot:
+      path: /Audio/Weapons/emitter.ogg
+  - type: ProjectileBatteryAmmoProvider
+    proto: EmitterCannonBolt
+    fireCost: 200
+  - type: MagazineVisuals
+    magState: mag
+    steps: 5
+    zeroVisible: true
+  - type: Appearance
+  - type: Construction
+    graph: EmitterCannonGraph
+    node: emittercannon
