--- a/Resources/Prototypes/Recipes/Crafting/improvised.yml
+++ b/Resources/Prototypes/Recipes/Crafting/improvised.yml
@@ -162,3 +162,16 @@
   icon:
     sprite: Objects/Misc/rifle_stock.rsi
     state: icon
+
+- type: construction
+  name: emitter cannon
+  id: emittercannon
+  graph: EmitterCannonGraph
+  startNode: start
+  targetNode: emittercannon
+  category: construction-category-weapons
+  objectType: Item
+  description: An underrated handheld emitter that can be used as a tool as well as a weapon.
+  icon:
+    sprite: Objects/Weapons/Guns/Battery/emitter_cannon.rsi
+    state: icon
