Some fixes + TG Maps: Resave + Nukers 40TC back

--- a/Resources/Prototypes/Entities/Objects/Misc/garment.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/garment.yml
@@ -101,6 +101,8 @@
       - id: ClothingHeadHatBeretEngineering
       - id: ClothingUniformJumpsuitChiefEngineer
       - id: ClothingUniformJumpskirtChiefEngineer
+      - id: ClothingUniformJumpsuitChiefEngineerTurtle
+      - id: ClothingUniformJumpskirtChiefEngineerTurtle
       - id: ClothingShoesColorBrown
 
 - type: entity
