--- a/Resources/Prototypes/Entities/Structures/Storage/Tanks/tanks.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Tanks/tanks.yml
@@ -173,10 +173,13 @@
   id: KvassTankFull
   suffix: Full
   components:
-    - type: SolutionContainerManager
-      solutions:
-        tank:
-          reagents:
-            - ReagentId: Kvass
-              Quantity: 1500
+  - type: SolutionContainerManager
+    solutions:
+      tank:
+        reagents:
+        - ReagentId: Kvass
+          Quantity: 1500
+  - type: ExaminableSolution
+    solution: tank
+  - type: ReagentTank
     transferAmount: 100
